pushed api to a alpha-stage:  - fixed and tested websocket-handler  - api clean-up, tests and documentation  - concurrency-tests
